# CPC-RatSlam

./: 1stageWithDifferent1stageThresholds.txt  2stageWithDifferent1stageThresholds.txt  CMakeLists.txt  README.md  package.xml
anal/: .gitignore  clear.sh
config/: ratslam_raw.txt.in
launch/: awsHouse.launch  bothStages.launch  empty_world.launch  firstStageOnly.launch  firstStageOnlyWithRatSLAM.launch  hospital.launch  house.launch  irat_raw.launch  openRatSlam.launch  raw.launch  rawWithRatslam.launch  warehouse.launch  world.launch
maps/: hospital.pgm  hospital.yaml  smallHouse.pgm  smallHouse.yaml  warehouseMap.pgm  warehouseMap.yaml
msg/: LVDescription.msg
rviz/: pc.rviz
scripts/: colorCloud.py  lv.py  lvAnalyzer.py  lvbuilder.py
scripts/model/: MLP.py  PointNet.py  cls_model_62.pth  model.py  model1.pth  model2.pth  model3.pth  model4.pth  modelNew1.pth  modelNew2.pth  model_130.pth  model_3560.pth
scripts/tools/: graphMaker.py  lvDatasetCreator.py  nntrainer.py  testMatchingProcess.py  tools.py  tuneOutput.txt  tuneParams.py
scripts/utils/: colorUtils.py  pointSearch.py  utils.py
tests/: 2ndStageOnly.json  BothStages1.json  BothStages10.json  BothStages11.json  BothStages12.json  BothStages13.json  BothStages14.json  BothStages2.json  BothStages3.json  BothStages4.json  BothStages5.json  BothStages6.json  BothStages7.json  BothStages8.json  BothStages9.json  bothStages.json  houseBothStages.json  houseBothStages2.json  houseBothStages3.json  houseBothStages4.json  houseBothStages5.json  houseBothStages6.json  houseBothStages7.json
tests/hospital/: 1stStageOnly.json  bothStages.json  buildingTimes1stStage.txt  buildingTimesBoth.txt  fpDetails1stStage.txt  fpDetailsBoth.txt  fpDetailsRatSlam.txt  matchingTimes1stStage.txt  matchingTimesBoth.txt  objectsCounts.txt  ratslamResults.txt
tests/house/: 1stStageOnly.json  bothStages.json  buildingTimes1stStage.txt  buildingTimesBoth.txt  fpDetailsBoth.txt  fpDetailsFirst.txt  fpDetailsRatSlam.txt  matchingTimes1stStage.txt  matchingTimesBoth.txt  objectsCounts.txt  ratslamResults.txt
tests/results/: tablesData.txt
tests/warehouse/: 1stStageOnly.json  bothStages.json  buildingTimes1stStage.txt  buildingTimesBoth.txt  fpDetails1stOnly.txt  fpDetailsBoth.txt  fpDetailsRatSlam.txt  matchingTimes1stStage.txt  matchingTimesBoth.txt  objectsCounts.txt  ratslamResults.txt
urdf/: turtlebot3_waffle_custom.gazebo.xacro  turtlebot3_waffle_custom.urdf.xacro
worlds/: warehouse.world
